# gTestClionTemplate

./: CMakeLists.txt  README.md  main.cpp
sources/: CMakeLists.txt
sources/Person_lib/: CMakeLists.txt  Person.cpp  Person.h
tests/: CMakeLists.txt
tests/Person_lib/: PersonTests.cpp
tests/lib/: CMakeLists.txt
